Test plugin with newer versions of Gradle